# chirpy

./: CLAUDE.md  Cargo.toml  README.md
crates/chirpy-core/: Cargo.toml
crates/chirpy-core/src/: bpsk.rs  carrier.rs  chirp.rs  config.rs  equalizer.rs  frame.rs  lib.rs  pulse.rs  rx.rs  spectrogram.rs  tx.rs  wav.rs
crates/chirpy-core/tests/: loopback.rs
crates/chirpy-rx/: Cargo.toml
crates/chirpy-rx/src/: debug_tui.rs  main.rs
crates/chirpy-tx/: Cargo.toml
crates/chirpy-tx/src/: main.rs
