[package]
name = "chirpy-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crc = { workspace = true }
hound = { workspace = true }
num-complex = { workspace = true }
rustfft = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
