[package]
name = "chirpy-rx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chirpy-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
cpal = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
