[package]
name = "chirpy-rx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chirpy-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
cpal = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = "0.30.2"
crossterm = "0.29.0"
num-complex.workspace = true
